added tab icon, took away massive logo display. flex display on background image

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
             Kids
         </title> 
         <link href="website.css" rel="stylesheet">
+        <link rel="icon" type="image/png" href="imgs/heartKidsLogo.jpg">
     </head>
     <body id="home">
         <header>
