--- a/activities.html
+++ b/activities.html
@@ -7,6 +7,7 @@
             Kids--Activities
         </title> 
         <link href="website.css" rel="stylesheet">
+        <link rel="icon" type="image/png" href="imgs/heartKidsLogo.jpg">
     </head>
     <body id="activities">
         <header>
