--- a/childcare.html
+++ b/childcare.html
@@ -7,6 +7,7 @@
             Kids--Childcare
         </title> 
         <link href="website.css" rel="stylesheet">
+        <link rel="icon" type="image/png" href="imgs/heartKidsLogo.jpg">
     </head>
     <body id="childcare">
         <header>
