--- a/concerns.html
+++ b/concerns.html
@@ -7,6 +7,7 @@
             Kids--Concerns
         </title> 
         <link href="website.css" rel="stylesheet">
+        <link rel="icon" type="image/png" href="imgs/heartKidsLogo.jpg">
     </head>
     <body id="concerns">
         <header>
