--- a/preschool.html
+++ b/preschool.html
@@ -7,6 +7,7 @@
             Kids--Preschool
         </title> 
         <link href="website.css" rel="stylesheet">
+        <link rel="icon" type="image/png" href="imgs/heartKidsLogo.jpg">
     </head>
     <body id="preschool">
         <header>
